--- a/index.html
+++ b/index.html
@@ -8,7 +8,34 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-
-    
+    <header>
+        <div class="logo">WeatherNode</div>
+        <div>
+            <form>
+               <input type="text" placeholder="Search city" />
+               <br/>
+               <span class="error-msg">No matching location found!</span>
+            </form>
+        </div>
+    </header>
+    <main>
+        <div class="main-weather-display">
+        <div class="general-info">
+          <p class="condition">MOSTLY SUNNY</p>
+          <h1 class="location">LONDON</h1>
+          <span class="degrees">69</span>
+        </div>
+        <div class="weather-details">
+          <p class="feels-like">FEELS LIKE: 70</p>
+          <p class="wind-mph">WIND: 5 MPH</p>
+          <p class="humidity">HUMIDITY: 69</p>
+        </div>
+      </div>
+    </main>
+    <footer>
+        <p>Photo by <a href="https://unsplash.com/@laup?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Paul Volkmer</a> on <a href="https://unsplash.com/photos/cluster-of-stars-in-the-sky-qVotvbsuM_c?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+      </p>
+      <p>Project by <a href="https://github.com/Shumaila-sayed">Shumaila Sayed</a></p>
+    </footer>
 </body>
 </html>
