--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">WeatherNode</div>
+        <div><h2 class="logo">Weather</h2></div>
         <div>
             <form>
                <input type="text" placeholder="Search city" />
@@ -23,19 +23,20 @@
         <div class="general-info">
           <p class="condition">MOSTLY SUNNY</p>
           <h1 class="location">LONDON</h1>
-          <span class="degrees">69</span>
+          <div class="degrees">50<p class="symbol">&#8457;</p></div>
         </div>
         <div class="weather-details">
-          <p class="feels-like">FEELS LIKE: 70</p>
+          <div class="feels-like">FEELS LIKE: 70<p class="symbol-small">&#8457;</p></div>
           <p class="wind-mph">WIND: 5 MPH</p>
           <p class="humidity">HUMIDITY: 69</p>
         </div>
       </div>
     </main>
     <footer>
-        <p>Photo by <a href="https://unsplash.com/@laup?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Paul Volkmer</a> on <a href="https://unsplash.com/photos/cluster-of-stars-in-the-sky-qVotvbsuM_c?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+        <div class="credits">
+     <p>Photo by <a href="https://unsplash.com/@rodi01?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Rodrigo Soares</a> on <a href="https://unsplash.com/photos/silhouette-of-tree-SCvlb1FWeuY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
       </p>
-      <p>Project by <a href="https://github.com/Shumaila-sayed">Shumaila Sayed</a></p>
+      <p>Project by <a href="https://github.com/Shumaila-sayed">Shumaila Sayed</a></p></div>
     </footer>
 </body>
 </html>
