--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                <span class="error-msg">No matching location found!</span>
             </form>
         </div>
+        <div class="deg-toggle">
+          <div class="deg" id="farhen"><span >&#8457;</span></div>
+          <div class="deg" id="celius"><span >&#8451;</span></div>
+        </div>
     </header>
     <main>
         <div class="main-weather-display">
