convert to celius

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <header>
         <div><h2 class="logo">Weather</h2></div>
         <div>
-            <form>
-               <input type="text" placeholder="Search city" />
-               <br/>
-               <span class="error-msg">No matching location found!</span>
-            </form>
+          <form>
+            <input type="text" placeholder="Search city" />
+            <br/>
+            <span class="error-msg">No matching location found!</span>
+          </form>
         </div>
         <div class="deg-toggle">
-          <div class="deg" id="farhen"><span >&#8457;</span></div>
-          <div class="deg" id="celius"><span >&#8451;</span></div>
+          <div class="deg" id="farhen"><span>&#8457;</span></div>
+          <div class="deg" id="celius"><span>&#8451;</span></div>
         </div>
     </header>
     <main>
@@ -27,20 +27,21 @@
         <div class="general-info">
           <p class="condition">MOSTLY SUNNY</p>
           <h1 class="location">LONDON</h1>
-          <div class="degrees">50<p class="symbol">&#8457;</p></div>
+          <p class="degrees">50</p>
         </div>
         <div class="weather-details">
-          <div class="feels-like">FEELS LIKE: 70<p class="symbol-small">&#8457;</p></div>
-          <p class="wind-mph">WIND: 5 MPH</p>
-          <p class="humidity">HUMIDITY: 69</p>
+          <p class="feels-like">FEELS LIKE: 70</p>
+          <p class="wind">WIND: 5 MPH</p>
+          <p class="humidity">HUMIDITY: 69%</p>
         </div>
       </div>
     </main>
     <footer>
-        <div class="credits">
-     <p>Photo by <a href="https://unsplash.com/@rodi01?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Rodrigo Soares</a> on <a href="https://unsplash.com/photos/silhouette-of-tree-SCvlb1FWeuY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
-      </p>
-      <p>Project by <a href="https://github.com/Shumaila-sayed">Shumaila Sayed</a></p></div>
+       <div class="credits">
+        <p>photo by <a href="https://unsplash.com/@rodi01?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Rodrigo Soares</a> on <a href="https://unsplash.com/photos/silhouette-of-tree-SCvlb1FWeuY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+        </p>
+       <p>project by <a href="https://github.com/Shumaila-sayed">Shumaila Sayed</a></p>
+      </div>
     </footer>
 </body>
 </html>
