--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Node</title>
+    <link rel="icon" href="./assets/cloud_32dp_75FBFD_FILL1_wght400_GRAD0_opsz40.png">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
